src/test/ui/empty/empty-linkname.stderr
error[E0454]: #[link(name = "")] given with empty name
  --> $DIR/empty-linkname.rs:1:1
   |
LL | #[link(name = "")]
   | ^^^^^^^^^^^^^^^^^^ empty name given

error: aborting due to previous error

For more information about this error, try `rustc --explain E0454`.
