src/test/ui/empty/empty-linkname.rs
#[link(name = "")] //~ ERROR: given with empty name
extern {
}

fn main() {}
